      search for matching nicks (reported by Tim)
    ! more cases where channels go to wrong window, yay for
      ircii handling of hidden windows
    ! silly bug which prevented client from ignoring repeated
      CTCP requests (reported by dcb314)
    ! crash in VERSION reply on irc.koreaboo.com (reported by wiz)
    ! do not display away status when not connected to a server

------------------------------------------------------------------------------

ScrollZ v2.2.3, 29.12.2013

    ! crash when displaying very large aliases (reported by -jff-)
    ! +password in ENCRMSG is not treated as a FiSH key if FiSH is
      not available (reported by -jff-)
    ! slashes (on Unix) and backslashes (on Windows) in channel names
      are converted to underscores in per channel logging
    + SET DEFAULT_PROTOCOL to specify default IP protocol for
      server connections (patch by SteelyDan)
    ! parallel make install (patch by Nathan Phillip Brink)
    ! respect CPP flags in Makefile (patch by Nathan Phillip Brink)
    ! dependencies in Makefile, fixes build on Debian sid
      (reported by juha)
    ! example for REGEXPREP (thanks SteelyDan)
    ! MODE #channel I/e/b for IPv6 addresses (reported by Jugernaut)
    ~ set AI_ADDRCONFIG flag for IP lookups when IPv6 support is
      enabled (suggested by SteelyDan)
    ! update target directory for manual page to modern /usr/share/man
      (reported by dan408)
    + parsing of numeric 378 for freenode (requested by SteelyDan)
    ! configure now exits if it can't find a working libtermcap
      / libncurses
    + half-op counters are now displayed in NWHOIS
    ! various small fixes
    ! memory / fd leaks reported by valgrind (thanks SteelyDan)
    - ICB support (patch by SteelyDan)
    + IRC servers can now be grouped (patch by SteelyDan)
    + TRACE facility, read HELP SET TRACE for more information
      (this is optional and has to be enabled in defs.h and is
       meant to help me track down bugs faster)