@@ -32,6 +32,8 @@ ScrollZ
       CTCP requests (reported by dcb314)
     ! crash in VERSION reply on irc.koreaboo.com (reported by wiz)
     ! do not display away status when not connected to a server
+    ! NEWHOST on Linux systems, it now uses proper APIs to collect
+      assigned IP addresses (hi Jugernaut)
 
 ------------------------------------------------------------------------------
 
